--- a/test_manus/test_manus2.tex
+++ b/test_manus/test_manus2.tex
@@ -93,33 +93,37 @@ Jyvaskyla, P.O. Box 35, FI-40014 Jyvaskyla, Finland}
   
   \begin{abstract}
   Future forest management needs to balance between sustainable timber,
-  supporting non-woody ecosystem services and shelter biodiversity. Novel
-  approaches as optimization of forest management to certain goals,
-  increasing proportion of set-aside forest stands, or novel management
-  approaches such as continuous forest cover emerge. However, novel ways
-  of forest management shape forest stands structures over the landscape
-  and will define the stand vulnerability to more frequent climatic
-  disruptions, such as windthrows under hardening climate change. To
-  understand how will the traditional (rotation forestry, RF) and novel
-  forest managements techniques (continuous cover forest, CCF) combined
-  using optimal management alternate the risk of wind damages over the
-  harvest intensity gradient (ranging from completely setaside to highest
-  harvesting rates), we combined the forest growth simulator under ranges
-  of management regimes (RF, CCF and combined: ALL), optimized over the
-  range of harvesting levels to calculate stand and landscape level wind
-  damage risk for alternative paths of the forest management and
-  harvesting levles over 100 years. We found that higher harvest intensity
-  in RF lowers wind risk, whereas the wind risk increased under CCF and
-  ALL scenarios. More intensive harvesting using RF produced more pulp,
-  while CCF provided higher volumes of the standing and harvested log
-  wood, which likely explains higher values of wind risk probability. RF
-  slightly increased the number of stands with open edge, which remained
-  stable under CCF and ALL regimes. Intensive harvesting may change
-  species composition to favour Norway spruce which will further increase
-  probability of wind damage in the future. Therefore, we suggest that
-  forest managers should consider the target forest species composition to
-  mitigate wind risk if aimed to support production of log wood over the
-  pulp.
+  supporting non-woody ecosystem services and shelter biodiversity. New
+  techniques to atteint this goal emerge: landscape level optimization of
+  forest managements, increasing proportion of set-aside forest stands, or
+  new harvesting techniques emerge, such as continuous forest cover. Yet,
+  novel stand and landscape level management shape forested landscapes and
+  define future stand vulnerability to more frequent climatic disruptions,
+  such as windthrows under hardening climate change. To understand how
+  will the traditional (rotation forestry, RF) and novel forest
+  managements techniques (continuous cover forest, CCF) combined using
+  optimal management alternate the risk of wind damages over the harvest
+  intensity gradient (ranging from completely set-aside (SA) to highest
+  harvesting rates), we simulated forest stand dynamics under groups of
+  alternative management regimes (RF, CCF and combined: ALL) optimized
+  over the range of harvesting intensity gradient to calculate stand and
+  landscape level wind damage risk for each alternative stand condistions
+  for next 100 years and how those vary under SA and active management. We
+  further quantify the mean pulp and log timber volume at risk under
+  scenarios and over time. We found that stands under CCF have higher wind
+  risk probability than RF, and RF maintains levels of wind risk over
+  time, while in CCF risk increases. Yet, the pulp timber at risk under RF
+  is three times higher then in CCF under all harvest intensities. The CCF
+  dominates in production of log wood, whereas pulp wood in intensive
+  harvesting (RF) creates up to 1/2 of the total standing volume. RF
+  produces smaller, younger trees (15 m and mean age of 50) compared to
+  CCF (22m and 80 years) (!!! WHAT ID DBH???), and maintains less trees
+  over stand. The stands under SA regimes have similar trends over harvest
+  intensity level and time, independent of prevailing regimes applied over
+  landscapes. We conclude that althought CCF increases landscape level
+  wind risk, it equalizes the exposed timber volume at risk over time,
+  compared to RF that culminates volume at risk to certain time - right
+  beforet the harvest.
   \end{abstract}
   
  \end{frontmatter}
@@ -148,6 +152,11 @@ cover forestry or in set-aside forestry. The fundamental is the carefull
 landscape level planning of the management actions balancing between
 set-aside (unmanaged forests), intensive management and continuously
 present forest cover.
+
+(Triviño et al., 2017) no single management alone is able to balance
+timber and biodiversity demand, and we need to combine management
+regimes over the landscape to balance between nonw-woody ESS,
+biuodiversity and timber production.
 
 Optimal management scenarios fullfil the specific objectives of the
 society of forest owners to provide certain timber value, improve
@@ -457,8 +466,12 @@ ALL, and strongly increases at high harvest intensity (from 3K for pine
 and from 5K for spruce). The frequency of thinnings in CCF increases 3-4
 times in CCF comparing to RF.
 
+\begin{figure}
+\centering
 \includegraphics{test_manus2_files/figure-latex/plot-dynamic-vars-1.pdf}
-\includegraphics{test_manus2_files/figure-latex/plot-dynamic-vars-2.pdf}
+\caption{\label{fig:plot-dynamic-vars}dynamics variables over harvest
+gradient and years}
+\end{figure}
 
 \section{Discussion}\label{discussion}
 
@@ -574,6 +587,13 @@ Suvanto, S., Peltoniemi, M., Tuominen, S., Strandström, M., Lehtonen,
 A., 2019. High-resolution mapping of forest vulnerability to wind for
 disturbance-aware forestry. Forest Ecology and Management 453, 117619.
 doi:\href{https://doi.org/10.1016/j.foreco.2019.117619}{10.1016/j.foreco.2019.117619}
+
+\hypertarget{ref-Trivino2017}{}
+Triviño, M., Pohjanmies, T., Mazziotta, A., Juutinen, A., Podkopaev, D.,
+Le Tortorec, E., Mönkkönen, M., 2017. Optimizing management to enhance
+multifunctionality in a boreal forest landscape. Journal of Applied
+Ecology 54.
+doi:\href{https://doi.org/10.1111/1365-2664.12790}{10.1111/1365-2664.12790}
 
 \hypertarget{ref-Zimova2020}{}
 Zimová, S., Dobor, L., Hlásny, T., Rammer, W., Seidl, R., 2020. Reducing
