--- a/test_manus/manual.bib
+++ b/test_manus/manual.bib
@@ -93,3 +93,20 @@ pages = {1--50},
 title = {{Reducing rotation age to address increasing disturbances in Central Europe : Potential and limitations}},
 year = {2020}
 }
+
+
+@article{Trivino2017,
+abstract = {{\textcopyright} 2016 The Authors. Journal of Applied Ecology {\textcopyright} 2016 British Ecological Society .},
+author = {Trivi{\~{n}}o, Mar{\'{i}}a and Pohjanmies, T{\"{a}}hti and Mazziotta, Adriano and Juutinen, Artti and Podkopaev, Dmitry and {Le Tortorec}, Eric and M{\"{o}}nkk{\"{o}}nen, Mikko},
+doi = {10.1111/1365-2664.12790},
+file = {:/fileservices.ad.jyu.fi/homes/mpotterf/My Documents/Mendeley Desktop//Trivi{\~{n}}o et al. - 2017 - Optimizing management to enhance multifunctionality in a boreal forest landscape.pdf:pdf},
+issn = {13652664},
+journal = {Journal of Applied Ecology},
+keywords = {Finland,biodiversity,carbon,climate change mitigation,climate regulation,ecosystem services,forest planning,multiobjective optimization,timber,trade-offs},
+mendeley-groups = {BERG,BioESShelath - indices},
+number = {1},
+title = {{Optimizing management to enhance multifunctionality in a boreal forest landscape}},
+volume = {54},
+year = {2017}
+}
+
