added Maiju's refereence to CCF as increasing multifunctionnality

--- a/test_manus/manual.bib
+++ b/test_manus/manual.bib
@@ -110,3 +110,18 @@ volume = {54},
 year = {2017}
 }
 
+
+@article{Peura2018,
+author = {Peura, Maiju and Burgas, Daniel and Eyvindson, Kyle and Repo, Anna and M{\"{o}}nkk{\"{o}}nen, Mikko},
+doi = {10.1016/j.biocon.2017.10.018},
+file = {:/fileservices.ad.jyu.fi/homes/mpotterf/My Documents/Mendeley Desktop/Peura et al. - 2017 - Continuous cover forestry is a cost-efficient tool to increase multifunctionality of boreal production forests in.pdf:pdf},
+issn = {00063207},
+journal = {Biological Conservation},
+keywords = {Biodiversity,Ecosystem service,Even-age,Set aside,Sustainability,Uneven-age},
+pages = {104--112},
+publisher = {Elsevier},
+title = {{Continuous cover forestry is a cost-efficient tool to increase multifunctionality of boreal production forests in Fennoscandia}},
+url = {https://doi.org/10.1016/j.biocon.2017.10.018},
+volume = {217},
+year = {2018}
+}
