--- a/test_manus/test_manus2.Rmd
+++ b/test_manus/test_manus2.Rmd
@@ -63,6 +63,8 @@ To balance between biodiversity and timber economic gains, the proportion of set
 
 [@Trivino2017] no single management alone is able to balance timber and biodiversity demand, and we need to combine management regimes over the landscape to balance between  nonw-woody ESS, biodiversity and timber production. WE need to diversity forest management over the landscape to support multifunctionnality [@Trivino2017]
 
+CCF is a cost-efficient tool to increase multifunctionnality in fennoscandia [@Peura2018]
+
 Optimal management scenarios fullfil the specific objectives of the society of forest owners to provide certain timber value, improve provision of timber and non-timber ecosystem services, or improve overall forest multifunctionality of the landscape. As such, optimization provides the combination of the specific forest management regimes on stand level. Althought the optimization process does not necessary involve the spatial configuration of the stands, it specifically assigns the particular regimes to individual stands and therefore allows to recreate alternative dynamics landscapes shaped by forest managements aggregated by optimal scenarios. As such, the spatial configuration of the management regimes allows to estimate the subsequent characteristics such as landscape level risk of wind damage. 
 
 The risk of the wind damage increases with current climate change and it creates the major risk to the stability of the forest production. Windthrows are unpredictable climatic disruption that shapes forest structure and composition, and if left unsalvaged could create opportiunities for deadwood dependent species and support local biodiversity. From economical point of view, however, windthrows massively abrupt the continuity of the timber supply, lowers timber quality from log to pulp, increases the prices of unplanned salvage harvesting (REF). To lower the risk of wind risk damage, current suggestions include shortening the rotation period, promoting/avoiding the wind resistant vs. wind prone tree specuies, advocate for shortening of the minimal stand age (Latvia REF). This however poses further pressure on the multifucntionnal and multiple objective oriented landscapes, which will provide habitats for endangered species, support non-timber services and forest recreational use. 
