update intro - raise main question???

--- a/test_manus/manual.bib
+++ b/test_manus/manual.bib
@@ -8,6 +8,20 @@ url = {https://tapio.fi/wp-content/uploads/2015/06/Metsanhoidon{\_}suositukset{\
 year = {2014}
 }
 
+@article{Pohjanmies2019,
+abstract = {},
+author = {Pohjanmies, T{\"{a}}hti and Eyvindson, Kyle and M{\"{o}}nkk{\"{o}}nen, Mikko},
+doi = {10.1371/journal.pone.0218213},
+file = {:/fileservices.ad.jyu.fi/homes/mpotterf/My Documents/Mendeley Desktop/Pohjanmies, Eyvindson, M{\"{o}}nkk{\"{o}}nen - 2019 - Forest management optimization across spatial scales to reconcile economic and conservation(2).pdf:pdf},
+isbn = {1111111111},
+issn = {19326203},
+journal = {PLoS ONE},
+number = {6},
+pages = {1--16},
+title = {{Forest management optimization across spatial scales to reconcile economic and conservation objectives}},
+volume = {14},
+year = {2019}
+}
 
 
 @article{Suvanto2019,
@@ -26,7 +40,7 @@ volume = {453},
 year = {2019}
 }
 
-@article{Eyvindson2020,
+@article{Eyvindson2021,
 author = {Eyvindson, Kyle and Duflot, R{\'{e}}mi and Trivi{\~{n}}o, Mar{\'{i}}a and Blattert, Clemens and Potterf, M{\'{a}}ria and M{\"{o}}nkk{\"{o}}nen, Mikko},
 doi = {10.1016/j.landusepol.2020.104918},
 file = {:/fileservices.ad.jyu.fi/homes/mpotterf/My Documents/Mendeley Desktop/Eyvindson et al. - 2020 - High boreal forest multifunctionality requires continuous cover forestry as a dominant management.pdf:pdf},
