--- a/test_manus/test_manus2.Rmd
+++ b/test_manus/test_manus2.Rmd
@@ -33,8 +33,8 @@ footnote:
   - #code: 2
     #text: "Equal contribution"
 abstract: |
-  Future forest management needs to balance between sustainable timber, supporting non-woody ecosystem services and shelter biodiversity. New techniques to atteint this goal emerge: landscape level optimization of forest managements, increasing proportion of set-aside forest stands, or new harvesting techniques emerge, such as continuous forest cover. Yet, novel stand and landscape level management shape forested landscapes and define future stand vulnerability to more frequent climatic disruptions, such as windthrows under hardening climate change. 
-  To understand how will the traditional (rotation forestry, RF) and novel forest managements techniques (continuous cover forest, CCF) combined using optimal management alternate the risk of wind damages over the harvest intensity gradient (ranging from completely set-aside (SA) to highest harvesting rates), we  simulated forest stand dynamics under groups of alternative management regimes (RF, CCF and combined: ALL) optimized over the range of harvesting intensity gradient to calculate stand and landscape level wind damage risk for each alternative stand condistions for next 100 years and how those vary under SA and active management. We further quantify the mean pulp and log timber volume at risk under scenarios and over time. 
+  Future forest management needs to balance between simultaneous provision of timber, supporting non-woody ecosystem services, and shelter biodiversity. New techniques to atteint this goal emerge: landscape-level optimization of forest managements, increasing proportion of set-aside forest stands, and new harvesting techniques, such as continuous forest cover. Yet, novel stand- and landscape-level management shape forest structures and define future stand vulnerability to more frequent climatic disruptions, such as windthrows under hardening climate change. 
+  To understand how will the traditional (rotation forestry, RF) and novel forest managements techniques (continuous cover forest, CCF) combined by optimal management alternate the probability of wind risk, we  simulated forest stand dynamics under groups of alternative management regimes (RF, CCF and combined: ALL) optimized over the range of harvesting intensity gradient to calculate stand level probability of wind damage over 100 years period. We further investigate the effects of wind damage risk by the  pulp and log timber volume at risk under variaous scenarios and over time. 
   We found that stands under CCF have higher wind risk probability than RF, and RF maintains levels of wind risk over time, while in CCF risk increases. Yet, the pulp timber at risk under RF is three times higher then in CCF under all harvest intensities. The CCF dominates in production of log wood, whereas pulp wood in intensive harvesting (RF) creates up to 1/2 of the total standing volume. RF produces smaller, younger trees (15 m and mean age of 50) compared to CCF (22m and 80 years) (!!! WHAT ID DBH???), and maintains less trees over stand. The stands under SA regimes have similar trends over harvest intensity level and time, independent of prevailing regimes applied over landscapes. We conclude that althought CCF increases landscape level wind risk, it equalizes the exposed timber volume at risk over time, compared to RF that culminates volume at risk to certain time - right beforet the harvest.    
   
 
@@ -58,12 +58,10 @@ output:
 Introduction
 ==========================
 
-Future forest ecosystems need to simultaneously provide timber, non-woody ecosystem services such as carbon storage or human recreation, and shelter biodiversity.  Adaptive forest management strives to balance between timber production, provision of non-woody ecosystem services, and biodiversity. Existance of biodiversity, mostly attached to existence of deadwood, is limited by harvesting intensity. Intensive logging activities fragment forested landscapes. 
-To balance between biodiversity and timber economic gains, the proportion of set-aside forests within commercial forests emerges, and new forest management approaches are explored, such as continuous forest cover [@Eyvindson2020] and traditional harvesting regimes are becoming controversial or requested to ban (…). The increase of the set aside forests within the commercial forests, as well as development of the new management techniques affect landscape level structural diversity, timing of the thinning, presence of absence of the final cuts in rotation forestry or development of the larger trees within continuous cover forestry or in set-aside forestry. The fundamental is the carefull landscape level planning of the management actions balancing between set-aside (unmanaged forests), intensive management and continuously present forest cover.
+Future forest ecosystems should simultaneously deliver timber, non-woody ecosystem services and shelter biodiversity while facing increasing of forest disturbances  future disturbances   
 
-[@Trivino2017] no single management alone is able to balance timber and biodiversity demand, and we need to combine management regimes over the landscape to balance between  nonw-woody ESS, biodiversity and timber production. WE need to diversity forest management over the landscape to support multifunctionnality [@Trivino2017]
-
-CCF is a cost-efficient tool to increase multifunctionnality in fennoscandia [@Peura2018]
+Future forest ecosystems need to simultaneously provide timber, non-woody ecosystem services such as carbon storage or human recreation, and shelter biodiversity.  
+To balance between biodiversity and timber economic gains, the proportion of set-aside forests within commercial forests emerges, and new forest management approaches are explored, such as continuous forest cover [@Eyvindson2021] and traditional harvesting regimes are becoming controversial or requested to ban (…). The increase of the set aside forests within the commercial forests, as well as development of the new management techniques affect landscape level structural diversity, timing of the thinning, presence of absence of the final cuts in rotation forestry or development of the larger trees within continuous cover forestry or in set-aside forestry. The fundamental is the carefull landscape level planning of the management actions balancing between set-aside (unmanaged forests), intensive management and continuously present forest cover.
 
 Optimal management scenarios fullfil the specific objectives of the society of forest owners to provide certain timber value, improve provision of timber and non-timber ecosystem services, or improve overall forest multifunctionality of the landscape. As such, optimization provides the combination of the specific forest management regimes on stand level. Althought the optimization process does not necessary involve the spatial configuration of the stands, it specifically assigns the particular regimes to individual stands and therefore allows to recreate alternative dynamics landscapes shaped by forest managements aggregated by optimal scenarios. As such, the spatial configuration of the management regimes allows to estimate the subsequent characteristics such as landscape level risk of wind damage. 
 
@@ -75,6 +73,11 @@ Here we explore how the restriction of forest management practices, along with t
 
 Our study aims to understand how types of forest management and harvesting intensity affect stand and landcape level wind risk over time, and how much timber volume is at the risk at time.  We hypothetized that RF will increase stand level wind risk due accumulated timber volume before the final cut, and increase wind risk in landscape due to increasing number of stands with open edges after the final cuts. On the other hand, the CCF will likely homogenize the amount of timber volume over landscape; therefore at any given time, the exposed timber volume to wind damage will be lower in CCF compared to RF management. We wil consider the pulp and log volume of the standing volume. We futher investigate the dynamics of simulated stand characteristics as stand dominant height, dominant tree speciecs by stand, age, number of trees by stand, frequency of opend edge stands and thinning frequency over the landscape over the harvest intensity gradient and time. We further differentiate between the dynamics of the volume and wind risk in managed and set-aside forests.
 
+[@Trivino2017] no single management alone is able to balance timber and biodiversity demand, and we need to combine management regimes over the landscape to balance between  nonw-woody ESS, biodiversity and timber production. WE need to diversity forest management over the landscape to support multifunctionnality [@Trivino2017]
+
+Althought the larger spatial planning scale improves a little bit the mitigation between economic and ecological benefits, the succesful restoration of deadwood dependent biodiversity will likely require active deadwod creation [@Pohjanmies2019].   
+
+CCF is a cost-efficient tool to increase multifunctionnality in fennoscandia [@Peura2018]
 
 
 
