--- a/test_manus/test_manus2.tex
+++ b/test_manus/test_manus2.tex
@@ -93,27 +93,25 @@ Jyvaskyla, P.O. Box 35, FI-40014 Jyvaskyla, Finland}
   
   \begin{abstract}
   Future forest management needs to balance between sustainable timber,
-  supporting non-woody ecosystem services and shelter biodiversity. New
+  supporting non-woody ecosystem services, and shelter biodiversity. New
   techniques to atteint this goal emerge: landscape level optimization of
-  forest managements, increasing proportion of set-aside forest stands, or
-  new harvesting techniques emerge, such as continuous forest cover. Yet,
-  novel stand and landscape level management shape forested landscapes and
+  forest managements, increasing proportion of set-aside forest stands,
+  and new harvesting techniques, such as continuous forest cover. Yet,
+  novel stand- and landscape-level management shape forest structures and
   define future stand vulnerability to more frequent climatic disruptions,
   such as windthrows under hardening climate change. To understand how
   will the traditional (rotation forestry, RF) and novel forest
-  managements techniques (continuous cover forest, CCF) combined using
-  optimal management alternate the risk of wind damages over the harvest
-  intensity gradient (ranging from completely set-aside (SA) to highest
-  harvesting rates), we simulated forest stand dynamics under groups of
-  alternative management regimes (RF, CCF and combined: ALL) optimized
-  over the range of harvesting intensity gradient to calculate stand and
-  landscape level wind damage risk for each alternative stand condistions
-  for next 100 years and how those vary under SA and active management. We
-  further quantify the mean pulp and log timber volume at risk under
-  scenarios and over time. We found that stands under CCF have higher wind
-  risk probability than RF, and RF maintains levels of wind risk over
-  time, while in CCF risk increases. Yet, the pulp timber at risk under RF
-  is three times higher then in CCF under all harvest intensities. The CCF
+  managements techniques (continuous cover forest, CCF) combined by
+  optimal management alternate the probability of wind risk, we simulated
+  forest stand dynamics under groups of alternative management regimes
+  (RF, CCF and combined: ALL) optimized over the range of harvesting
+  intensity gradient to calculate stand level probability of wind damage
+  over 100 years period. We further investigate the effects of wind damage
+  risk by the pulp and log timber volume at risk under variaous scenarios
+  and over time. We found that stands under CCF have higher wind risk
+  probability than RF, and RF maintains levels of wind risk over time,
+  while in CCF risk increases. Yet, the pulp timber at risk under RF is
+  three times higher then in CCF under all harvest intensities. The CCF
   dominates in production of log wood, whereas pulp wood in intensive
   harvesting (RF) creates up to 1/2 of the total standing volume. RF
   produces smaller, younger trees (15 m and mean age of 50) compared to
@@ -156,7 +154,12 @@ present forest cover.
 (Triviño et al., 2017) no single management alone is able to balance
 timber and biodiversity demand, and we need to combine management
 regimes over the landscape to balance between nonw-woody ESS,
-biuodiversity and timber production.
+biodiversity and timber production. WE need to diversity forest
+management over the landscape to support multifunctionnality (Triviño et
+al., 2017)
+
+CCF is a cost-efficient tool to increase multifunctionnality in
+fennoscandia (Peura et al., 2018)
 
 Optimal management scenarios fullfil the specific objectives of the
 society of forest owners to provide certain timber value, improve
@@ -571,6 +574,13 @@ Eyvindson, K., Kangas, A., 2018. Guidelines for risk management in
 forest planning --- what is risk and when is risk management useful?
 Canadian Journal of Forest Research 48, 309--316.
 doi:\href{https://doi.org/10.1139/cjfr-2017-0251}{10.1139/cjfr-2017-0251}
+
+\hypertarget{ref-Peura2018}{}
+Peura, M., Burgas, D., Eyvindson, K., Repo, A., Mönkkönen, M., 2018.
+Continuous cover forestry is a cost-efficient tool to increase
+multifunctionality of boreal production forests in Fennoscandia.
+Biological Conservation 217, 104--112.
+doi:\href{https://doi.org/10.1016/j.biocon.2017.10.018}{10.1016/j.biocon.2017.10.018}
 
 \hypertarget{ref-RDevelopmentCoreTeam2019}{}
 R Development Core Team, 2019. R: A language and environment for
